# voicevox_ort

./: Cargo.toml
.github/workflows/: code-quality.yml  test.yml
examples/async-gpt2-api/: Cargo.toml
examples/custom-ops/: Cargo.toml
examples/gpt2/: Cargo.toml
examples/model-info/: Cargo.toml
examples/modnet/: Cargo.toml
examples/training/: Cargo.toml
examples/webassembly/: Cargo.toml
examples/yolov8/: Cargo.toml
ort-sys/: Cargo.toml  build.rs  dist.txt
ort-sys/src/: lib.rs
ort-sys/src/internal/: dirs.rs  mod.rs
src/: environment.rs  error.rs  lib.rs
src/execution_providers/: mod.rs  rocm.rs
src/operator/: bound.rs
src/session/: builder.rs
