[workspace]
members = [
	'ort-sys',
	'examples/async-gpt2-api',
	'examples/custom-ops',
	'examples/gpt2',
	'examples/model-info',
	'examples/yolov8',
	'examples/modnet',
	'examples/webassembly'
]
default-members = [
	'.',
	'examples/async-gpt2-api',
	'examples/custom-ops',
	'examples/gpt2',
	'examples/model-info',
	'examples/yolov8',
	'examples/modnet'
]
exclude = [ 'examples/cudarc' ]

[package]
name = "voicevox-ort"
description = "A safe Rust wrapper for ONNX Runtime 1.17 - Optimize and Accelerate Machine Learning Inferencing"
version = "2.0.0-rc.2"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VOICEVOX/ort"
documentation = "https://ort.pyke.io/"
readme = "README.md"
keywords = [ "machine-learning", "ai", "ml" ]
categories = [ "algorithms", "mathematics", "science", "science" ]
authors = [
	"pyke.io <contact@pyke.io>",
	"Nicolas Bigaouette <nbigaouette@gmail.com>"
]
include = [ "src/", "benches/", "LICENSE-APACHE", "LICENSE-MIT", "README.md" ]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[package.metadata.docs.rs]
features = [ "ndarray", "half", "operator-libraries", "fetch-models", "load-dynamic", "copy-dylibs" ]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
rustdoc-args = [ "--cfg", "docsrs" ]

[lib]
name = "ort"

[features]
default = [ "ndarray", "half", "download-binaries", "copy-dylibs" ]

operator-libraries = [ "libc", "winapi" ]

fetch-models = [ "ureq" ]
download-binaries = [ "voicevox-ort-sys/download-binaries" ]
load-dynamic = [ "libloading", "voicevox-ort-sys/load-dynamic" ]
copy-dylibs = [ "voicevox-ort-sys/copy-dylibs" ]

cuda = [ "voicevox-ort-sys/cuda" ]
tensorrt = [ "voicevox-ort-sys/tensorrt" ]
openvino = [ "voicevox-ort-sys/openvino" ]
onednn = [ "voicevox-ort-sys/onednn" ]
directml = [ "voicevox-ort-sys/directml" ]
nnapi = [ "voicevox-ort-sys/nnapi" ]
coreml = [ "voicevox-ort-sys/coreml" ]
xnnpack = [ "voicevox-ort-sys/xnnpack" ]
rocm = [ "voicevox-ort-sys/rocm" ]
acl = [ "voicevox-ort-sys/acl" ]
armnn = [ "voicevox-ort-sys/armnn" ]
tvm = [ "voicevox-ort-sys/tvm" ]
migraphx = [ "voicevox-ort-sys/migraphx" ]
rknpu = [ "voicevox-ort-sys/rknpu" ]
vitis = [ "voicevox-ort-sys/vitis" ]
cann = [ "voicevox-ort-sys/cann" ]
qnn = [ "voicevox-ort-sys/qnn" ]

[dependencies]
ndarray = { version = "0.15", optional = true }
thiserror = "1.0"
voicevox-ort-sys = { version = "2.0.0-rc.2", path = "ort-sys" }
libloading = { version = "0.8", optional = true }

ureq = { version = "2.1", optional = true, default-features = false, features = [ "tls" ] }
tracing = "0.1"
half = { version = "2.1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true, features = [ "std", "libloaderapi" ] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"
web-sys = "0.3"

[dev-dependencies]
anyhow = "1.0"
ureq = "2.1"
image = "0.25"
test-log = { version = "0.2", default-features = false, features = [ "trace" ] }
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
glassbench = "0.4"
tokio = { version = "1.36", features = [ "test-util" ] }
tokio-test = "0.4.3"
wasm-bindgen-test = "0.3"

[[bench]]
name = "squeezenet"
harness = false
